[package]
name = "bmp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bmp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features = ["init-if-needed"]}
anchor-spl = {version="0.29.0", features = ["metadata"]}
ahash = "=0.8.6"
mpl-token-metadata = { version="4.0.0" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
#spl-token-2022 = {version = "2.0.1", features = ["no-entrypoint"]}
spl-token-metadata-interface = "0.2.1"
#spl-type-length-value = "0.3.1"
#spl-pod = "0.1.1"
#solana-program = "1.16.16"