[package]
name = "bmp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bmp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
ahash = "=0.8.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
nifty-asset = "0.0.0"
