[package]
name = "epochs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "epochs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
ahash = "=0.8.6"
nifty-asset = "0.1.2"
nifty-asset-types = "0.1.0"